--- a/frontend/forgot.html
+++ b/frontend/forgot.html
@@ -5,7 +5,7 @@
     <script src="[[[.CdnPrefix]]]/js/forgot.js"></script>
     <link rel="icon" href="[[[.CdnPrefix]]]/images/120x120.png">
     <link rel="stylesheet" href="[[[.CdnPrefix]]]/css/auth.css">
-    <title>Commento: Reset your Password</title>
+    <title>Reset your Password</title>
   </head>
 
   <div class="navbar">
