--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -5,7 +5,7 @@
     <script src="[[[.CdnPrefix]]]/js/profile.js"></script>
     <link rel="icon" href="[[[.CdnPrefix]]]/images/120x120.png">
     <link rel="stylesheet" href="[[[.CdnPrefix]]]/css/auth.css">
-    <title>Commento: Edit Profile</title>
+    <title>Edit Profile</title>
   </head>
 
   <div class="navbar">
