--- a/frontend/reset.html
+++ b/frontend/reset.html
@@ -5,14 +5,9 @@
     <script src="[[[.CdnPrefix]]]/js/reset.js"></script>
     <link rel="icon" href="[[[.CdnPrefix]]]/images/120x120.png">
     <link rel="stylesheet" href="[[[.CdnPrefix]]]/css/auth.css">
-    <title>Commento: Reset your Password</title>
+    <title>Reset your Password</title>
   </head>
 
-  <div class="navbar">
-    <a href="[[[.Origin]]]/" class="navbar-item navbar-logo-text"><img src="[[[.CdnPrefix]]]/images/logo.svg" class="navbar-logo">Commento</a>
-    <a href="[[[.Origin]]]/login" class="navbar-item">Login</a>
-    <a href="[[[.Origin]]]/signup" class="navbar-item">Signup</a>
-  </div>
 
   <div class="auth-form-container">
     <div class="auth-form">
