--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,14 +5,10 @@
     <script src="[[[.CdnPrefix]]]/js/login.js"></script>
     <link rel="icon" href="[[[.CdnPrefix]]]/images/120x120.png">
     <link rel="stylesheet" href="[[[.CdnPrefix]]]/css/auth.css">
-    <title>Commento: Login</title>
+    <title>Login</title>
   </head>
 
-  <div class="navbar">
-    <a href="[[[.Origin]]]/" class="navbar-item navbar-logo-text"><img src="[[[.CdnPrefix]]]/images/logo.svg" class="navbar-logo">Commento</a>
-    <a href="[[[.Origin]]]/login" class="navbar-item"><b>Login</b></a>
-    <a href="[[[.Origin]]]/signup" class="navbar-item">Signup</a>
-  </div>
+ 
 
   <script>
   window.onload = function() {
